--- a/templates/frame.html
+++ b/templates/frame.html
@@ -12,8 +12,8 @@
         <link rel="shortcut icon" href="./Pman.ico" type="image/vnd.microsoft.icon"/>
         
         
-        <link rel="stylesheet" type="text/css" href="{rootURL}/roojs1/css/roojs.css" />  
-        <link rel="stylesheet" type="text/css" href="{rootURL}/roojs1/css/xtheme-slate.css" />  
+        <link rel="stylesheet" type="text/css" href="../../../../roojs1/css/roojs.css" />  
+        <link rel="stylesheet" type="text/css" href="../../../../roojs1/css/xtheme-slate.css" />  
         
         
        
