templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -38,7 +38,7 @@
         
         
                
-        <script type="text/javascript" src="../../../..//roojs1/roojs-debug.js"></script>
+        <script type="text/javascript" src="../../../../roojs1/roojs-debug.js"></script>
 
         <script type="text/javascript">
             baseURL="baseURL" 
