templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -81,6 +81,7 @@
              
                
         <script type="text/javascript">
+            Pman = Pman || {};
             Pman.debug = true;
         </script>
                
