templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -81,7 +81,7 @@
              
                
         <script type="text/javascript">
-            Pman = Pman || {};
+            Pman = typeof(Pman) == 'undefined' ? {} : Pman;
             Pman.debug = true;
         </script>
                
