templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -71,7 +71,7 @@
         </script>
                
                
-        <div id="title" class="x-layout-inactive-content logoblock">
+        <div id="title" class=" logoblock">
              
             <div id="headerInformation">Some other details</div>
             
