templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -73,7 +73,7 @@
                
         <div id="title" class=" logoblock">
              
-            <div id="headerInformation">Some other details</div>
+            <div id="headerInformation">Preview of app</div>
             
             
         </div>
