--- a/templates/frame.html
+++ b/templates/frame.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html 
       PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
@@ -12,20 +11,26 @@
         <link rel="shortcut icon" href="./Pman.ico" type="image/vnd.microsoft.icon"/>
         
         
-        <link rel="stylesheet" type="text/css" href="../../../../roojs1/css/roojs.css" />  
-        <link rel="stylesheet" type="text/css" href="../../../../roojs1/css/xtheme-slate.css" />  
+        <link rel="stylesheet" type="text/css" href="{rootURL}/roojs1/css/roojs.css" />  
+        <link rel="stylesheet" type="text/css" href="{rootURL}/roojs1/css/xtheme-slate.css" />  
         
-        
-       
+        {outputCSSIncludes()}
+                     
+    
      </head>
     <body class="ytheme-gray">  
-         <!--background:#F8ECB2;-->   
+     
+       
         
-        
-               
-        <script type="text/javascript" src="../../../../roojs1/roojs-debug.js"></script>
-
-        <script type="text/javascript">
+{if:bootLoader.Pman[roo_debug]}                  
+        <script type="text/javascript" src="{rootURL}/roojs1/roojs-debug.js?ts={version}"></script>
+        <!-- <script type="text/javascript" src="{rootURL}/roojs1/ux/Iscroll.js"></script>  -->
+         
+{else:}                  
+        <script type="text/javascript" src="{rootURL}/roojs1/roojs-all.js?ts={version}"></script>
+                 
+{end:}                  
+        <flexy:toJSON 
             baseURL="baseURL" 
             rootURL="rootURL" 
             isDev="isDev"
@@ -48,33 +53,39 @@
             AppVersion="appVersion"
             appDisabled="appDisabled"
             uiConfig="uiConfig"
-         
-         
+        ></flexy:toJSON>
+        
+        <script type="text/javascript">
             Ext=Roo; // bc
             Roo.BLANK_IMAGE_URL =  rootURL + "/roojs1/images/gray/s.gif";
             Roo.rootURL = rootURL +'/roojs1/';
         </script>
-         
-         
-        <!-- used by App.php in Builder - to enable loading of code/applicaiton on the fly
-       
+        
+        {outputJavascriptIncludes()}
+             
+        <!-- used by App.php in Builder - to enable loading of code/applicaiton on the fly -->
+        {foreach:builderJs,js}
             <script type="text/javascript" src="{baseURL}/Builder/Code/{js}.js"></script>    
         {end:} 
-            -->
-            
+           
+           
+           
+           
         <!-- finally language.. -->   
-             
+        <script type="text/javascript" src="{baseURL}/Core/I18n.js"></script>
+               
                
         <script type="text/javascript">
-            Pman = typeof(Pman) == 'undefined' ? {} : Pman;
             Pman.debug = true;
         </script>
                
                
-        <div id="title" class=" logoblock">
-             
-            <div id="headerInformation">Preview of app</div>
-            
+        <div id="title" class="x-layout-inactive-content logoblock">
+            <img id="headerInformation-company-logo" 
+                src="{rootURL}/Pman/{appNameShort}/templates/images/logo_small.gif" height="25"/>
+            <div id="headerInformation">Some other details</div>
+            <img id="headerInformation-applogo" 
+                src="{rootURL}/Pman/{appNameShort}/templates/images/logo_small.gif" height="25"/>
             
         </div>
          
