templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -74,18 +74,11 @@
         </script>
                
                
-        <div id="title" class="x-layout-inactive-content logoblock">
-            <img id="headerInformation-company-logo" 
-                src="{rootURL}/Pman/{appNameShort}/templates/images/logo_small.gif" height="25"/>
-            <div id="headerInformation">Some other details</div>
-            <img id="headerInformation-applogo" 
-                src="{rootURL}/Pman/{appNameShort}/templates/images/logo_small.gif" height="25"/>
-            
-        </div>
+       
          
           
            
-        <div id="mainlist" class="x-layout-inactive-content">
+        <div id="mainlist" >
             <p>main body</p>
                 
         </div>
