--- a/templates/frame.html
+++ b/templates/frame.html
@@ -68,7 +68,7 @@
         <!-- finally language.. -->   
         <script type="text/javascript" src="{baseURL}/Core/I18n.js"></script>
                
-               
+        <script type="text/javascript" src="{rootURL}/Pman/Builder/Pman.Builder.View.js"></script>      
         <script type="text/javascript">
             Pman.debug = true;
         </script>
