--- a/templates/frame.html
+++ b/templates/frame.html
@@ -14,6 +14,12 @@
         <link rel="stylesheet" type="text/css" href="{rootURL}/roojs1/css/roojs.css" />  
         <link rel="stylesheet" type="text/css" href="{rootURL}/roojs1/css/xtheme-slate.css" />  
         
+                 
+         
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+        
+        
         {outputCSSIncludes()}
                      
     
