templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -65,6 +65,7 @@
             Ext=Roo; // bc
             Roo.BLANK_IMAGE_URL =  rootURL + "/roojs1/images/gray/s.gif";
             Roo.rootURL = rootURL +'/roojs1/';
+            Pman = { Tab : {} , Dialog : {} };
         </script>
         
         {outputJavascriptIncludes()}
@@ -76,6 +77,7 @@
                
         <script type="text/javascript" src="{rootURL}/Pman/Builder/Pman.Builder.View.js"></script>      
         <script type="text/javascript">
+            
             Pman.debug = true;
         </script>
                
