templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -65,7 +65,7 @@
             Ext=Roo; // bc
             Roo.BLANK_IMAGE_URL =  rootURL + "/roojs1/images/gray/s.gif";
             Roo.rootURL = rootURL +'/roojs1/';
-            Pman = { Tab : {} , Dialog : {}, I18n : {} };
+            Pman = { Tab : {} , Dialog : {}, I18n : {} , Builder : {} };
         </script>
         
         {outputJavascriptIncludes()}
