templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -88,7 +88,7 @@
             <p>main body</p>
                 
         </div>
-          
+            <script type="text/javascript" src="{rootURL}/Pman/Builder/templates/testframe.js"></script>      
     </body>
 </html>
         
