--- a/templates/frame.html
+++ b/templates/frame.html
@@ -31,11 +31,13 @@
 {if:bootLoader.Pman[roo_debug]}                  
         <script type="text/javascript" src="{rootURL}/roojs1/roojs-debug.js?ts={version}"></script>
         <!-- <script type="text/javascript" src="{rootURL}/roojs1/ux/Iscroll.js"></script>  -->
+        <script type="text/javascript" src="{rootURL}/roojs1/roojs-bootstrap-debug.js?ts={version}"></script>                 
          
 {else:}                  
         <script type="text/javascript" src="{rootURL}/roojs1/roojs-all.js?ts={version}"></script>
-                 
-{end:}                  
+        <script type="text/javascript" src="{rootURL}/roojs1/roojs-bootstrap.js?ts={version}"></script>                 
+{end:}
+
         <flexy:toJSON 
             baseURL="baseURL" 
             rootURL="rootURL" 
