templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -85,7 +85,7 @@
                
                
          
-            <script type="text/javascript" src="{rootURL}/Pman/Builder/templates/testframe.js"></script>      
+          <!--  <script type="text/javascript" src="{rootURL}/Pman/Builder/templates/testframe.js"></script>      -->
     </body>
 </html>
         
