templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -35,7 +35,8 @@
          
 {else:}                  
         <script type="text/javascript" src="{rootURL}/roojs1/roojs-all.js?ts={version}"></script>
-        <script type="text/javascript" src="{rootURL}/roojs1/roojs-bootstrap.js?ts={version}"></script>                 
+        <script type="text/javascript" src="{rootURL}/roojs1/roojs-bootstrap-debug.js?ts={version}"></script>                 
+        <!-- <script type="text/javascript" src="{rootURL}/roojs1/roojs-bootstrap.js?ts={version}"></script>                  -->
 {end:}
 
         <flexy:toJSON 
