templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -16,9 +16,9 @@
         
                  
          
-            <link rel="stylesheet" href="{rootURL}/bootswatch/custom/bootstrap.min.css">
+        <link rel="stylesheet" href="{rootURL}/bootswatch/custom/bootstrap.min.css">
+        <link rel="stylesheet" href="{rootURL}/roo/css-bootstrap/sticky-footer.css">
         
-            <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
    <!--  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css"> -->
         
