templates/frame.html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="{rootURL}/roojs1/css-bootstrap/tweaks.css">
         <link rel="stylesheet" href="{rootURL}/roojs1/css-bootstrap/combobox.css">
         
-
+        <link rel="stylesheet" href="{rootURL}/roojs1/css-bootstrap/calendar.css">
    <!--  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css"> -->
          
         {outputCSSIncludes()}
